--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<hibernate.version>5.3.14.Final</hibernate.version>
 	</properties>
 
 	<dependencies>
